fix(api docs): fixed the issue with docs being cutoff
docs are no longer cut off when viewed on cashmere mobile. also addressed the stray comment and used
the universal breakpoint rather than hardcoding it

"fix #1583"

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -225,9 +225,7 @@ table {
         }
     }
 
-    //Work with this
-
-    @media only screen and (max-width: 600px) {
+    @include media-breakpoint-down(sm) {
         .docs-api-properties-table, 
         .docs-api-properties-row,
         .docs-api-properties-th,
